objects/NVMContactWorld__CaseRoutingRequest__c.object
<CustomObject>
    <fields>
        <fullName>NVMContactWorld__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_Status_to_set_on_Agent_release__c</fullName>
        <label>Case Status to set on Agent release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case_Status_to_set_on_assign_to_Agent__c</fullName>
        <label>Case Status to set on assign to Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>CaseRequestPromises</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__PreviousAction__c</fullName>
        <label>PreviousAction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__TryRouteToOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TryRouteToOwner</label>
        <type>Checkbox</type>
    </fields>
    <label>CaseRoutingRequest</label>
    <listViews>
        <fullName>NVMContactWorld__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CaseRoutingRequest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CaseRoutingRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>